--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_keyboard_visibility: ^5.3.0
   flutter_secure_storage: ^6.0.0
+  image_picker: ^0.8.5+3
+  image_gallery_saver: ^1.7.1
+  flutter_hooks: ^0.18.5+1
+  http: ^0.13.5
 
 dev_dependencies:
   json_serializable:
